<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_setting"
        android:orderInCategory="100"
        android:title="@string/settingsItem"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_open_notes"
        android:orderInCategory="100"
        android:title="@string/openNotesItem"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_checkBox"
        android:orderInCategory="100"
        android:title="@string/action_checkbox"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_spinner"
        android:orderInCategory="100"
        android:title="@string/action_spinner"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_calendarView"
        android:orderInCategory="100"
        android:title="@string/action_calendarView"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_endless_transition"
        android:orderInCategory="100"
        android:title="@string/action_endless_transition"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_universal_form"
        android:orderInCategory="100"
        android:title="@string/action_uniform"
        app:showAsAction="never"/>

</menu>