<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/chooseStartDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="left|center_vertical"
        android:text="@string/chooseStartDate"
        tools:ignore="RtlHardcoded" />

    <CalendarView
        android:id="@+id/startDateCalendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp" />

    <Button
        android:id="@+id/chooseEndDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="left|center_vertical"
        android:text="@string/chooseEndDate"
        tools:ignore="RtlHardcoded" />

    <CalendarView
        android:id="@+id/endDateCalendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#E2E2E2" />

    <Button
        android:id="@+id/btn_OK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/btn_ok" />

</LinearLayout>