<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/text_name"
        android:layout_width="276dp"
        android:layout_height="36dp"
        android:layout_marginTop="24dp"
        android:text="@string/text_name"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_name"
        android:layout_width="372dp"
        android:layout_height="47dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="#CCEEF8"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_name"
        tools:ignore="Autofill,LabelFor" />

    <Button
        android:id="@+id/button_ok"
        android:layout_width="312dp"
        android:layout_height="61dp"
        android:layout_marginBottom="24dp"
        android:background="#6AE4EE"
        android:text="@string/ok_button"
        app:layout_constraintBottom_toTopOf="@+id/button_delete"
        app:layout_constraintEnd_toEndOf="@+id/button_delete"
        app:layout_constraintStart_toStartOf="@+id/button_delete"
        tools:ignore="NotSibling" />

    <Button
        android:id="@+id/button_delete"
        android:layout_width="315dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="176dp"
        android:background="#6AE4EE"
        android:text="@string/delete_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="NotSibling" />

    <TextView
        android:id="@+id/text_mail"
        android:layout_width="271dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/text_mail"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_name" />

    <EditText
        android:id="@+id/editText_mail"
        android:layout_width="374dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="#CCEEF8"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_mail"
        tools:ignore="Autofill,LabelFor" />

    <TextView
        android:id="@+id/text_successful_subscribe"
        android:layout_width="367dp"
        android:layout_height="104dp"
        android:layout_marginTop="32dp"
        android:background="#FFFFFF"
        android:text=""
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/button_delete"
        app:layout_constraintStart_toStartOf="@+id/button_delete"
        app:layout_constraintTop_toBottomOf="@+id/button_delete"
        tools:text="DevMod" />

</android.support.constraint.ConstraintLayout>